добавлена загрузка изображений с описанием
