# cmd/main.go
@@ -2,36 +2,24 @@ package main
 
 import (
 	_ "InstaSpace/docs"
-	"github.com/joho/godotenv"
-	"log"
-	"net/http"
-
 	"InstaSpace/internal/auth"
 	"InstaSpace/internal/db"
+	"InstaSpace/internal/photo"
+	"InstaSpace/pkg/middleware"
 	"github.com/gorilla/mux"
-	"github.com/swaggo/http-swagger"
+	"github.com/joho/godotenv"
+	httpSwagger "github.com/swaggo/http-swagger"
+	"log"
+	"net/http"
+	"os"
 )
 
-// @title Insta Space API
-// @version 1.0
-// @description Документация для API InstaSpace, включающая функционал авторизации и регистрации.
-
-// @host localhost:8080
-// @BasePath /
-
-// @securityDefinitions.apikey ApiKeyAuth
-// @in header
-// @name Authorization
-
-// @contact.name Техническая поддержка
-// @contact.email ramaro@internet.ru
-
 func main() {
-
 	err := godotenv.Load()
 	if err != nil {
 		log.Fatal("Error loading .env file")
 	}
+
 	dbPool := db.ConnectionDB()
 	defer dbPool.Close()
 
@@ -39,18 +27,29 @@ func main() {
 	authService := auth.NewAuthService(authRepo)
 	authHandler := auth.NewAuthHandler(authService)
 
+	photoRepo := photo.NewRepository(dbPool)
+	uploadDir := "./uploads"
+	if _, err := os.Stat(uploadDir); os.IsNotExist(err) {
+		os.Mkdir(uploadDir, os.ModePerm)
+	}
+	photoService := photo.NewService(photoRepo, uploadDir)
+
+	baseURL := "http://localhost:8080"
+	photoHandler := photo.NewHandler(photoService, baseURL)
+
 	router := mux.NewRouter()
 	router.HandleFunc("/register", authHandler.Register).Methods("POST")
 	router.HandleFunc("/login", authHandler.Login).Methods("POST")
 	router.HandleFunc("/confirm", authHandler.ConfirmEmail).Methods("GET")
 	router.HandleFunc("/resend-confirmation", authHandler.ResendConfirmation).Methods("POST")
+	router.HandleFunc("/photos/{id}", photoHandler.GetPhoto).Methods("GET")
+
+	router.PathPrefix("/uploads/").Handler(http.StripPrefix("/uploads/", http.FileServer(http.Dir("./uploads/"))))
 	router.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
 
-	// Группа защищённых маршрутов
-	//protected := router.PathPrefix("/protected").Subrouter()
-	//protected.Use(middleware.JWTAuth)
-	//protected.HandleFunc("/test", test).Methods("POST")
-	//protected.HandleFunc("/test", test).Methods("GET")
+	//Защищенные маршруты
+	router.Handle("/upload", middleware.JWTAuth(http.HandlerFunc(photoHandler.UploadPhoto))).Methods("POST")
+	//
 
 	log.Println("Server is running on port 8080")
 	if err := http.ListenAndServe(":8080", router); err != nil {
