# docs/swagger.yaml
@@ -1,11 +1,10 @@
-basePath: /
 definitions:
-  InstaSpace_internal_auth.ErrorResponse:
+  auth.ErrorResponse:
     properties:
       message:
         type: string
     type: object
-  InstaSpace_internal_auth.LoginRequest:
+  auth.LoginRequest:
     properties:
       email:
         example: user@example.com
@@ -14,7 +13,7 @@ definitions:
         example: password123
         type: string
     type: object
-  InstaSpace_internal_auth.RegisterRequest:
+  auth.RegisterRequest:
     properties:
       email:
         example: user@example.com
@@ -26,51 +25,31 @@ definitions:
         example: john_doe
         type: string
     type: object
-  InstaSpace_internal_auth.ResendConfirmationRequest:
+  auth.ResendConfirmationRequest:
     properties:
       email:
         type: string
     type: object
-  internal_auth.ErrorResponse:
+  photo.Photo:
     properties:
-      message:
+      created_at:
+        description: Дата и время создания фото
         type: string
+      description:
+        description: Описание изображения
+        type: string
+      id:
+        description: Идентификатор фото
+        type: integer
+      image_url:
+        description: URL изображения
+        type: string
+      user_id:
+        description: Идентификатор пользователя, загрузившего фото
+        type: integer
     type: object
-  internal_auth.LoginRequest:
-    properties:
-      email:
-        example: user@example.com
-        type: string
-      password:
-        example: password123
-        type: string
-    type: object
-  internal_auth.RegisterRequest:
-    properties:
-      email:
-        example: user@example.com
-        type: string
-      password:
-        example: password123
-        type: string
-      username:
-        example: john_doe
-        type: string
-    type: object
-  internal_auth.ResendConfirmationRequest:
-    properties:
-      email:
-        type: string
-    type: object
-host: localhost:8080
 info:
-  contact:
-    email: ramaro@internet.ru
-    name: Техническая поддержка
-  description: Документация для API InstaSpace, включающая функционал авторизации
-    и регистрации.
-  title: Insta Space API
-  version: "1.0"
+  contact: {}
 paths:
   /confirm:
     get:
@@ -93,38 +72,16 @@ paths:
         "400":
           description: Token is missing
           schema:
-            $ref: '#/definitions/internal_auth.ErrorResponse'
+            $ref: '#/definitions/auth.ErrorResponse'
         "401":
           description: Invalid or expired token
           schema:
-            $ref: '#/definitions/internal_auth.ErrorResponse'
+            $ref: '#/definitions/auth.ErrorResponse'
         "500":
           description: Failed to activate user
           schema:
-            $ref: '#/definitions/internal_auth.ErrorResponse'
+            $ref: '#/definitions/auth.ErrorResponse'
       summary: Подтверждение email пользователя
-      tags:
-      - auth
-  /generate-token:
-    get:
-      consumes:
-      - application/json
-      description: Генерирует новый JWT токен, используя переданный email в качестве
-        данных. Токен будет действителен в течение 24 часов.
-      parameters:
-      - description: Email для включения в JWT токен
-        in: path
-        name: email
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Успешно сгенерированный JWT токен
-          schema:
-            type: string
-      summary: Генерация JWT токена
       tags:
       - auth
   /login:
@@ -139,7 +96,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/internal_auth.LoginRequest'
+          $ref: '#/definitions/auth.LoginRequest'
       produces:
       - application/json
       responses:
@@ -152,18 +109,84 @@ paths:
         "400":
           description: Некорректные данные
           schema:
-            $ref: '#/definitions/internal_auth.ErrorResponse'
+            $ref: '#/definitions/auth.ErrorResponse'
         "401":
           description: Неверные учетные данные
           schema:
-            $ref: '#/definitions/internal_auth.ErrorResponse'
+            $ref: '#/definitions/auth.ErrorResponse'
         "500":
           description: Ошибка сервера
           schema:
-            $ref: '#/definitions/internal_auth.ErrorResponse'
+            $ref: '#/definitions/auth.ErrorResponse'
       summary: Авторизация пользователя
       tags:
       - auth
+  /photos/{id}:
+    get:
+      description: Fetch photo details by its unique identifier.
+      parameters:
+      - description: ID of the photo to retrieve
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Returns the photo details including the full URL
+          schema:
+            $ref: '#/definitions/photo.Photo'
+        "400":
+          description: Invalid photo ID
+          schema:
+            type: string
+        "404":
+          description: Photo not found
+          schema:
+            type: string
+      summary: Retrieves a photo by ID
+      tags:
+      - Photos
+  /photos/upload:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Upload a photo with an optional description. The uploaded photo
+        is associated with the authenticated user.
+      parameters:
+      - description: Photo file to upload
+        in: formData
+        name: photo
+        required: true
+        type: file
+      - description: Description for the photo
+        in: formData
+        name: Description
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Returns the uploaded photo details including the generated
+            URL
+          schema:
+            $ref: '#/definitions/photo.Photo'
+        "400":
+          description: Error uploading file or invalid input
+          schema:
+            type: string
+        "401":
+          description: Unauthorized access
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Uploads a new photo
+      tags:
+      - Photos
   /register:
     post:
       consumes:
@@ -176,7 +199,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/internal_auth.RegisterRequest'
+          $ref: '#/definitions/auth.RegisterRequest'
       produces:
       - application/json
       responses:
@@ -190,11 +213,11 @@ paths:
         "400":
           description: Некорректные данные
           schema:
-            $ref: '#/definitions/internal_auth.ErrorResponse'
+            $ref: '#/definitions/auth.ErrorResponse'
         "500":
           description: Ошибка регистрации
           schema:
-            $ref: '#/definitions/internal_auth.ErrorResponse'
+            $ref: '#/definitions/auth.ErrorResponse'
       summary: Регистрация нового пользователя
       tags:
       - auth
@@ -210,7 +233,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/internal_auth.ResendConfirmationRequest'
+          $ref: '#/definitions/auth.ResendConfirmationRequest'
       produces:
       - application/json
       responses:
@@ -233,9 +256,4 @@ paths:
       summary: Повторная отправка письма с подтверждением
       tags:
       - auth
-securityDefinitions:
-  ApiKeyAuth:
-    in: header
-    name: Authorization
-    type: apiKey
 swagger: "2.0"
