# internal/models/user.go
@@ -1,18 +1,16 @@
 package models
 
-// User представляет пользователя системы.
-// @description Это структура, описывающая пользователя, который регистрируется в приложении.
-// @example
-//
-//	{
-//	  "id": 1,
-//	  "email": "example@example.com",
-//	  "username": "john_doe"
-//	}
 type User struct {
 	ID       int64  `json:"id"`
 	Email    string `json:"email"`
 	Username string `json:"username"`
 	Password string `json:"-"`
 	IsActive bool   `json:"isActive"`
+}
+
+type Photo struct {
+	ID          uint   `json:"id" gorm:"primary_key"`
+	UserID      uint   `json:"user_id"`
+	URL         string `json:"url"`
+	Description string `json:"description"`
 }
